--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@headlessui/vue": "^1.6.7",
+    "chart.js": "^3.9.1",
     "core-js": "^3.6.5",
     "superagent": "^8.0.0",
     "vue": "^3.0.0",
+    "vue-chartjs": "^4.1.1",
     "vue-router": "^4.1.3"
   },
   "devDependencies": {
