--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@heroicons/vue": "^2.0.1",
     "chart.js": "^3.9.1",
     "core-js": "^3.6.5",
+    "express": "^4.18.1",
+    "serve-static": "^1.15.0",
     "superagent": "^8.0.0",
     "vue": "^3.0.0",
     "vue-chartjs": "^4.1.1",
