chore: remove trailing slash from api url

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 VUE_APP_TITLE=FPL Insight
-VUE_APP_API_URL=https://fpl-insight-api.herokuapp.com/
+VUE_APP_API_URL=https://fpl-insight-api.herokuapp.com
