--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "superagent": "^8.0.0",
     "vue": "^3.0.0",
     "vue-chartjs": "^4.1.1",
-    "vue-router": "^4.1.3"
+    "vue-router": "^4.1.3",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@tailwindcss/postcss7-compat": "^2.2.17",
