--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "chart.js": "^3.9.1",
     "core-js": "^3.6.5",
     "express": "^4.18.1",
+    "lodash": "^4.17.21",
     "serve-static": "^1.15.0",
     "superagent": "^8.0.0",
     "vue": "^3.0.0",
